--- a/css/outline.css
+++ b/css/outline.css
@@ -8,14 +8,14 @@ html *{
 body{
 	margin-left:auto;
 	margin-right:auto;
-	background-color: #b5b5b5;
-    background-repeat: repeat, no-repeat;
-    background-position: center center;
-    background-attachment: fixed;
-    -webkit-background-size: auto, cover;
-    -moz-background-size: auto, cover;
-    -o-background-size: auto, cover;
-    background-size: auto, cover;
+	background-color: #f2f2f2;
+	background-repeat: repeat, no-repeat;
+	background-position: center center;
+	background-attachment: fixed;
+	-webkit-background-size: auto, cover;
+	-moz-background-size: auto, cover;
+	-o-background-size: auto, cover;
+	background-size: auto, cover;
 	color: #000;
 	font-family: 'Josefin Slab', Arial, sans-serif;
 	font-size: 20px;
@@ -23,7 +23,7 @@ body{
 
 .container{
 	position:relative;
-	background: #b5b5b5;
+	background: #f2f2f2;
 }
 
 a{
@@ -59,19 +59,16 @@ h1 span{
 	line-height: 50px;
 	font-size: 15px;
 	background: #000;
-	opacity: 0.9;
+	opacity: 0.8;
 	text-transform: uppercase;
 	z-index: 9999;
 	position: relative;
-	-moz-box-shadow: 1px 0px 2px #000;
-	-webkit-box-shadow: 1px 0px 2px #000;
-	box-shadow: 1px 0px 2px #000;
 }
 
 .header a{
 	padding: 0px 10px;
 	letter-spacing: 1px;
-	color: #cacaca;
+	color: #f2f2f2;
 	display: block;
 	float: left;
 }
@@ -91,19 +88,19 @@ h1 span{
 
 .lcontent{
 	position: relative;
-    width:12%;
-    margin: 0px 5px;
+	width:12%;
+	margin: 0px 5px;
 	float:left;
-	opacity:0.9;
+	opacity:0.8;
 	padding-bottom:100px;
 }
 
 .lcontent:hover {
 	position: relative;
-    width:12%;
-    margin: 0px 5px;
+	width:12%;
+	margin: 0px 5px;
 	float:left;
-	opacity:0.9;
+	opacity:0.8;
 	padding-bottom:100px;
 }
 
@@ -123,10 +120,7 @@ h1 span{
 	background-color:#FFFFFF;
 	border-radius:10px;
 	-moz-border-radius: 15px;
-	-moz-box-shadow:    1px 2px 5px 1px #000;
-    -webkit-box-shadow: 1px 2px 5px 1px #000;
-    box-shadow:         1px 2px 5px 1px #000;
-	opacity: 0.9;
+	opacity: 0.8;
 	overflow: auto;
 }
 
@@ -144,22 +138,16 @@ h1 span{
 	padding:10px;
 }
 
-.footer{
-	position:relative;
-	text-align:center;
+.footer {
+	text-align: center;
 	width: 100%;
 	height: 100px;
-	margin-top:-100px;
 	color: #30971a;
-	font-size:15px;
-	opacity: 0.9;
+	font-size: 15px;
+	opacity: 0.8;
 	z-index: 9999;
-	bottom:0;
 	background: #000;
-	-moz-box-shadow: 1px 0px 2px #000;
-	-webkit-box-shadow: 1px 0px 2px #000;
-	box-shadow: 1px 0px 2px #000;
-	clear:both;
+	clear: both;
 }
 
 #itemList{
@@ -185,11 +173,5 @@ h1 span{
 }
 
 #itemList tr:nth-child(odd){
-	background-color:#fff;
+	background-color:#FFF;
 }
-
-#itemList tr:nth-child(1){
-	background-color: #3ab520;
-	color:#fff;
-}
-
